MapNodePlacer: reduce potential memory leak, add routes display + toggle + default hidden value MapEditor: fix scroll bar (remove width:100%, was overlapped with nodeplacer div and undraggable)

--- a/css/MapEditorComponent.css
+++ b/css/MapEditorComponent.css
@@ -10,7 +10,6 @@
 
 .map-editor-groups .editor-group {
     overflow-y: scroll;
-    width: 100%;
 }
 
 .mapButtons {
